2009-01-18	Mike Massonnet <mmassonnet@xfce.org>

Release version 0.9.0

2009-01-15	Mike Massonnet <mmassonnet@xfce.org>

	- Fix a leak by freeing the ClipmanAction structs
	- Fix a free corruption by allocating the correct size for the string array
	- Don't show the tabs in the settings dialog and use the gtk-paste icon
	- Backport from xfce-4-6 branch to save/load the history to/from cached
	files living inside ~/.cache.

2009-01-13	Mike Massonnet <mmassonnet@xfce.org>

	- Lookup the GdkWindow of the owner to notice if the clipboard was set
	from within Clipman and drop the IgnoreSignal variable (patch from
	David Collins)

2009-01-09	Mike Massonnet <mmassonnet@xfce.org>

	- Update the settings dialog
	- Move everything to the General tab

2009-01-09	Mike Massonnet <mmassonnet@xfce.org>

A quick review over the changes.

	- Fix g_free(clip) against panel_slice_free(clip)
	- Add dependency on exo and use exo_gdk_pixbuf_scale_ratio to create a
	preview of the image inside the menu
	- Don't save image data inside the rc file
	- Left two topics as TODO inside the code
	- At last but not least, bump release to 0.9.0

2009-01-02	Mike Massonnet <mmassonnet@xfce.org>

This is the second part of the rewrite that introduces the storage of an image
inside the panel plugin.  This part already marks the end of David's work.
Thank you for putting your efforts into this plugin.

	- Introduce a single pixbuf storage inside the plugin

2008-12-31	Mike Massonnet <mmassonnet@xfce.org>

This is the first part of the rewrite to make it more userfriendly, work done
by David Collins.  The patches are applied as-is until his work is clearly done
to avoid merge processes during that time.

	- Drop the behaviors NORMAL and STRICTLY
	- Drop PREVENTEMPTY which will be the case by default
	- Replace IGNORESELECT against ADDSELECT to avoid double negation reads
	in the code
	- New definitions ClipDataType and ClipMenuFormat